@startuml
skinparam backgroundColor #FFFDF0
skinparam class {
  BackgroundColor #FFF9E6
  BorderColor #E67E22
  HeaderBackgroundColor #E67E22
  HeaderFontColor white
}
skinparam linetype ortho
title ERD -- FreeNest (35+ tables, juin 2026)

entity "users" as U {
  * id: INT <<PK>>
  --
  name, email, role
  two_factor_secret
  phone, connects
}

entity "freelancer_profiles" as FP {
  * id: INT <<PK>>
  --
  user_id: INT <<FK>>
  title, hourly_rate, avg_rating
  availability, languages
}

entity "client_profiles" as CP {
  * id: INT <<PK>>
  --
  user_id: INT <<FK>>
  company_name, total_spent
}

entity "contracts" as CO {
  * id: INT <<PK>>
  --
  client_id: INT <<FK>>
  freelancer_id: INT <<FK>>
  job_id, proposal_id
  type, amount, status
  is_archived, dispute_reason
}

entity "milestones" as MI {
  * id: INT <<PK>>
  --
  contract_id: INT <<FK>>
  title, amount, status
  submitted_at, approved_at
}

entity "time_logs" as TL {
  * id: INT <<PK>>
  --
  contract_id: INT <<FK>>
  user_id: INT <<FK>>
  started_at, stopped_at, minutes
}

entity "contract_files" as CF {
  * id: INT <<PK>>
  --
  contract_id: INT <<FK>>
  name, path, version
  uploaded_by_id: INT <<FK>>
}

entity "contract_extensions" as CE {
  * id: INT <<PK>>
  --
  contract_id: INT <<FK>>
  old_deadline, new_deadline
  status: ENUM
}

entity "contract_activities" as CA {
  * id: INT <<PK>>
  --
  contract_id: INT <<FK>>
  event, metadata, performed_by_id
}

entity "agencies" as AG {
  * id: INT <<PK>>
  --
  owner_id: INT <<FK>>
  name, slug, description
}

entity "agency_members" as AGM {
  * id: INT <<PK>>
  --
  agency_id: INT <<FK>>
  user_id: INT <<FK>>
  role: ENUM
}

entity "agency_invitations" as AGI {
  * id: INT <<PK>>
  --
  agency_id: INT <<FK>>
  email, token, role
  expires_at
}

entity "catalog_projects" as CAT {
  * id: INT <<PK>>
  --
  user_id: INT <<FK>>
  title, slug, tiers, status
}

entity "catalog_orders" as CORD {
  * id: INT <<PK>>
  --
  catalog_project_id: INT <<FK>>
  buyer_id: INT <<FK>>
  tier, price, status
}

entity "identity_verifications" as KYC {
  * id: INT <<PK>>
  --
  user_id: INT <<FK>>
  document_type, status
  admin_notes
}

entity "tax_documents" as TAX {
  * id: INT <<PK>>
  --
  user_id: INT <<FK>>
  type: ENUM, data, status
}

entity "subscriptions" as SUB {
  * id: INT <<PK>>
  --
  user_id: INT <<FK>>
  stripe_id, stripe_status
  stripe_price, ends_at
}

entity "wallets" as WA {
  * id: INT <<PK>>
  --
  user_id: INT <<FK>>
  balance, pending_balance
  escrow_balance
}

entity "withdrawals" as WITH {
  * id: INT <<PK>>
  --
  wallet_id: INT <<FK>>
  amount, fee, net_amount
  status, stripe_transfer_id
}

entity "weekly_invoices" as WI {
  * id: INT <<PK>>
  --
  contract_id: INT <<FK>>
  week_start, week_end
  hours, rate, total, status
}

entity "transactions" as TR {
  * id: INT <<PK>>
  --
  wallet_id: INT <<FK>>
  type, amount, fee, status
}

entity "talent_lists" as TLI {
  * id: INT <<PK>>
  --
  user_id: INT <<FK>>
  name, is_private
}

entity "messages" as MSG {
  * id: INT <<PK>>
  --
  conversation_id: INT <<FK>>
  sender_id: INT <<FK>>
  body, type, is_read
  edited_at, deleted_at
}

entity "message_reactions" as MR {
  * id: INT <<PK>>
  --
  message_id: INT <<FK>>
  user_id: INT <<FK>>
  emoji: VARCHAR
}

entity "audit_logs" as AL {
  * id: INT <<PK>>
  --
  user_id: INT <<FK>>
  action, metadata, ip_address
}

entity "push_subscriptions" as PS {
  * id: INT <<PK>>
  --
  user_id: INT <<FK>>
  endpoint, public_key, auth_token
}

U ||--o| FP    : "profil"
U ||--o| CP    : "profil"
U ||--|| WA    : "portefeuille"
U ||--o{ CO    : "client/freelancer"
U ||--o| KYC   : "kyc"
U ||--o| TAX   : "fiscal"
U ||--o| SUB   : "abonnement"
U ||--o{ AL    : "audit"
U ||--o{ PS    : "push"

CO ||--o{ MI   : "jalons"
CO ||--o{ TL   : "temps"
CO ||--o{ CF   : "fichiers"
CO ||--o{ CE   : "extensions"
CO ||--o{ CA   : "activite"
CO ||--o{ WI   : "factures hebdo"

AG ||--o{ AGM  : "membres"
AG ||--o{ AGI  : "invitations"

CAT ||--o{ CORD : "commandes"

WA ||--o{ TR   : "transactions"
WA ||--o{ WITH : "retraits"

MSG ||--o{ MR  : "reactions"

U ||--o{ TLI   : "listes talents"
@enduml